# solana-frontier

./: .env.example  .gitignore  Anchor.toml  BACKEND_INTEGRATED.md  BACKEND_SETUP_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DRIFT_INTEGRATION.md  INTEGRATION_COMPLETE.md  MONITORING.md  README.md  README_BACKEND.md  SETUP.md  SETUP_COMPLETE.md  START_HERE.md  docker-compose.yml  package-lock.json  package.json  setup-devnet.sh  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  wallet-adapter.css
app/positions/: page.tsx
app/proofs/: page.tsx
app/providers/: WalletProvider.tsx
app/strategies/: page.tsx
app/vault/: page.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
backend/: Anchor.toml  PRODUCTION_SETUP.md  README.md  ecosystem.config.js  package.json  setup-devnet.sh
backend/prisma/: schema.prisma
backend/src/: server.ts
cipher-yield-app/: package-lock.json  package.json
cipher-yield/backend/: package-lock.json  package.json  tsconfig.json
components/dashboard/: PerformanceChart.tsx
components/layout/: Header.tsx
components/ui/: Button.tsx  Card.tsx  StatBlock.tsx  StatusIndicator.tsx
components/vault/: DepositWithdraw.tsx  PositionsList.tsx  VaultOverview.tsx
docs/: ARCHITECTURE.md  FILE_STRUCTURE.md  SETUP.md  STATUS.md
hooks/: useShieldVault.ts
lib/: api.ts
lib/constants/: index.ts
lib/hooks/: useVaultData.ts
programs/cipher_vault/: Cargo.toml
programs/cipher_vault/src/instructions/: close_hedge.rs  deposit.rs  initialize_vault.rs  open_hedge.rs  submit_proof.rs  withdraw.rs
(+112 files in other folders)
